--- a/script.html
+++ b/script.html
@@ -1,77 +1,6 @@
 <script>
-        // URL do Google Apps Script - definida dinamicamente pelo Apps Script
-        const SCRIPT_URL = <?= JSON.stringify(scriptUrl || '') ?>;
-        let erroCriticoMostrado = false;
-
-        function exibirErroCriticoInicial(mensagem, detalhes = {}) {
-            if (erroCriticoMostrado) return;
-            erroCriticoMostrado = true;
-            console.error(mensagem, detalhes);
-            try {
-                const corpo = document.body;
-                if (!corpo) return;
-                const estilo = document.createElement('style');
-                estilo.textContent = `
-                    .app-critical-error {
-                        min-height: 100vh;
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                        justify-content: center;
-                        gap: 12px;
-                        background: #0f172a;
-                        color: #f8fafc;
-                        font-family: 'Roboto', system-ui, -apple-system, sans-serif;
-                        text-align: center;
-                        padding: 24px;
-                    }
-                    .app-critical-error h1 {
-                        font-size: 24px;
-                        margin: 0;
-                    }
-                    .app-critical-error p {
-                        margin: 0;
-                        max-width: 640px;
-                        line-height: 1.5;
-                    }
-                    .app-critical-error code {
-                        background: rgba(255, 255, 255, 0.08);
-                        border: 1px solid rgba(255, 255, 255, 0.12);
-                        border-radius: 8px;
-                        padding: 8px 12px;
-                        display: inline-block;
-                        color: #cbd5f5;
-                    }
-                `;
-                const container = document.createElement('div');
-                container.className = 'app-critical-error';
-                container.innerHTML = `
-                    <h1>Não foi possível carregar o sistema</h1>
-                    <p>${mensagem}</p>
-                    ${SCRIPT_URL ? `<p><code>${SCRIPT_URL}</code></p>` : ''}
-                    <p>Republique o WebApp e tente novamente. Se o problema persistir, copie o erro do console e envie para suporte.</p>
-                `;
-                corpo.innerHTML = '';
-                corpo.appendChild(estilo);
-                corpo.appendChild(container);
-            } catch (erroRender) {
-                console.error('Falha ao renderizar mensagem de erro crítico:', erroRender);
-            }
-        }
-
-        const scriptUrlValido = typeof SCRIPT_URL === 'string' && /^https?:\/\//.test(SCRIPT_URL.trim());
-        if (!scriptUrlValido) {
-            exibirErroCriticoInicial('URL do WebApp não configurada ou inválida. Publique o Apps Script como WebApp e copie o endereço público.');
-        }
-        window.addEventListener('error', (event) => {
-            if (erroCriticoMostrado) return;
-            exibirErroCriticoInicial('Erro inesperado ao carregar o aplicativo. Consulte o console para detalhes.', {
-                mensagem: event.message,
-                origem: event.filename,
-                linha: event.lineno,
-                coluna: event.colno,
-            });
-        });
+        // URL do Google Apps Script - ATUALIZE COM SUA URL
+        const SCRIPT_URL = 'https://script.google.com/a/macros/isgh.org.br/s/AKfycbzbGb6sQR1auYsyTB-kwPos7Cd7swLuTUDiAzzpwTPW2cj76ykYzKYgBDXA-g5ef7pbpw/exec';
         // Estado da aplicação
         function criarEstadoLiberacaoInicial() {
             return {
@@ -1703,11 +1632,6 @@
         }
         // Função para chamar o Google Apps Script
         async function callGoogleScript(action, data = {}, opcoes = {}) {
-            if (!scriptUrlValido) {
-                console.error('Tentativa de chamada ao Apps Script sem URL válida.', { action });
-                mostrarErro('URL do WebApp não configurada ou inválida. Republique o Apps Script e tente novamente.');
-                return { success: false, error: 'URL do WebApp não configurada', _erroNotificado: true };
-            }
             const tentativasConfiguradas = Number.isFinite(opcoes.tentativas) && opcoes.tentativas > 0
                 ? Math.floor(opcoes.tentativas)
                 : 3;
@@ -2632,21 +2556,6 @@
                 text: mensagem,
                 icon: 'success',
                 confirmButtonText: 'OK'
-            });
-        }
-        function notificarRegistroContingenciaIniciado() {
-            Swal.fire({
-                toast: true,
-                position: 'top-end',
-                icon: 'info',
-                title: 'Abrindo registro de contingência',
-                text: 'Preparando o formulário...',
-                showConfirmButton: false,
-                timer: 1600,
-                timerProgressBar: true,
-                didOpen: () => {
-                    Swal.showLoading();
-                }
             });
         }
         function notificarErroPadrao(resultado, mensagemPadrao = 'Ocorreu um erro inesperado') {
@@ -5370,8 +5279,6 @@
                 return;
             }
 
-            notificarRegistroContingenciaIniciado();
-
                 let fotoContingencia = { base64: '', mime: '', nome: '' };
 
                 const resultado = await Swal.fire({
@@ -5396,14 +5303,7 @@
                         </div>
                         <div class="swal-form-group">
                             <label for="contingencia-foto">Foto da contingência</label>
-                            <input id="contingencia-foto" type="file" class="sr-only" accept="image/jpeg,image/png" aria-required="true">
-                            <div class="file-upload-actions">
-                                <button type="button" class="upload-button" id="contingencia-foto-btn">
-                                    <i class="fas fa-upload" aria-hidden="true"></i>
-                                    <span>Adicionar foto</span>
-                                </button>
-                                <span class="file-upload-label" id="contingencia-foto-label">Nenhum arquivo selecionado</span>
-                            </div>
+                            <input id="contingencia-foto" type="file" class="swal2-input" accept="image/jpeg,image/png" aria-required="true">
                             <small class="field-hint">Envie JPG ou PNG até 2 MB.</small>
                         </div>
                     </div>
@@ -5412,20 +5312,6 @@
                 showCancelButton: true,
                 confirmButtonText: 'Registrar',
                 cancelButtonText: 'Cancelar',
-                didOpen: () => {
-                    const inputFoto = document.getElementById('contingencia-foto');
-                    const botaoFoto = document.getElementById('contingencia-foto-btn');
-                    const labelFoto = document.getElementById('contingencia-foto-label');
-                    if (botaoFoto && inputFoto) {
-                        botaoFoto.addEventListener('click', () => inputFoto.click());
-                    }
-                    if (inputFoto && labelFoto) {
-                        inputFoto.addEventListener('change', () => {
-                            const arquivo = inputFoto.files?.[0];
-                            labelFoto.textContent = arquivo?.name || 'Nenhum arquivo selecionado';
-                        });
-                    }
-                },
                 preConfirm: async () => {
                     const popup = Swal.getPopup();
                     const acompanhante = padronizarNomeMaiusculo(popup.querySelector('#contingencia-acompanhante').value);
@@ -6192,32 +6078,9 @@
             } else {
                 await Swal.fire({
                     title: 'Sem armários disponíveis',
-                    html: `
-                        <div class="premium-modal">
-                            <div class="premium-modal__icon">
-                                <i class="fas fa-box-open" aria-hidden="true"></i>
-                            </div>
-                            <p class="premium-modal__lead">Nenhum armário ${tipo === 'visitante' ? 'de visitantes' : 'de acompanhantes'} está livre agora.</p>
-                            <div class="premium-modal__tips">
-                                <span class="premium-modal__badge">Dica rápida</span>
-                                <ul>
-                                    <li>Verifique se há liberações pendentes para acelerar o giro.</li>
-                                    <li>Considere mover contingências para armários recém liberados.</li>
-                                    <li>Mantenha a unidade selecionada atualizada para filtrar corretamente.</li>
-                                </ul>
-                            </div>
-                        </div>
-                    `,
-                    customClass: {
-                        popup: 'swal2-premium-popup',
-                        title: 'swal2-premium-title',
-                        confirmButton: 'swal2-premium-confirm'
-                    },
-                    background: 'rgba(255, 255, 255, 0.82)',
-                    backdrop: 'rgba(15, 23, 42, 0.32)',
-                    iconHtml: '<i class="fas fa-cubes"></i>',
-                    iconColor: '#4338ca',
-                    confirmButtonText: 'Entendi'
+                    text: `Não há armários ${tipo === 'visitante' ? 'de visitantes' : 'de acompanhantes'} disponíveis no momento.`,
+                    icon: 'warning',
+                    confirmButtonText: 'OK'
                 });
             }
         }
