--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                     </div>
                 </div>
                 <div class="header-quick-actions">
+                    <button type="button" class="theme-toggle" id="theme-toggle" aria-label="Ativar tema escuro" aria-pressed="false">
+                        <i class="fas fa-moon" aria-hidden="true"></i>
+                    </button>
                     <div class="notification-bell" id="notification-bell" aria-label="Notificações" tabindex="0">
                         <i class="fas fa-bell" aria-hidden="true"></i>
                         <span class="notification-badge">0</span>
