--- a/style.html
+++ b/style.html
@@ -514,7 +514,7 @@
             height: 100vh;
             position: fixed;
             overflow-y: auto;
-            transition: all 0.3s;
+            transition: width 0.32s cubic-bezier(0.22, 0.61, 0.36, 1), box-shadow 0.32s ease, background 0.32s ease;
             z-index: var(--z-sidebar);
             display: flex;
             flex-direction: column;
@@ -566,6 +566,11 @@
             font-size: 28px;
             box-shadow: 0 10px 24px rgba(15, 23, 42, 0.15);
         }
+        [data-theme="dark"] .sidebar-logo-icon {
+            background: color-mix(in srgb, #0b1220 70%, #ffffff 30%);
+            color: #f8fafc;
+            box-shadow: 0 12px 26px rgba(2, 6, 23, 0.6);
+        }
         .sidebar-title {
             font-size: 1.1rem;
             font-weight: 400;
@@ -598,6 +603,7 @@
             transition: all 0.3s;
             border-left: 4px solid transparent;
             text-align: left;
+            position: relative;
         }
         .sidebar-menu a:hover {
             background-color: color-mix(in srgb, white 18%, transparent);
@@ -606,6 +612,7 @@
         .sidebar-menu a.active {
             background-color: color-mix(in srgb, white 22%, transparent);
             border-left-color: var(--light-color);
+            font-weight: 500;
         }
         .sidebar-menu span {
             flex: 1;
@@ -5080,7 +5087,7 @@
                 width: var(--sidebar-width-collapsed);
                 align-items: center;
                 overflow: hidden;
-                transition: width 0.25s ease;
+                transition: width 0.32s cubic-bezier(0.22, 0.61, 0.36, 1), box-shadow 0.32s ease;
             }
             .sidebar-header {
                 padding: 18px 16px 14px;
@@ -5094,13 +5101,34 @@
             .sidebar-menu a {
                 display: flex;
                 align-items: center;
-            justify-content: center;
-            gap: 0;
-            text-align: center;
-            padding: 14px 0;
-            font-size: 1rem;
-            line-height: 1.2;
-            border-left: none;
+                justify-content: center;
+                gap: 0;
+                text-align: center;
+                padding: 14px 0;
+                font-size: 1rem;
+                line-height: 1.2;
+                border-left: none;
+                border-radius: 16px;
+            }
+            .sidebar-menu a:hover {
+                background: color-mix(in srgb, white 10%, transparent);
+                box-shadow: inset 0 0 0 1px color-mix(in srgb, white 10%, transparent);
+            }
+            .sidebar-menu a.active {
+                background: color-mix(in srgb, white 7%, transparent);
+                box-shadow: inset 0 0 0 1px color-mix(in srgb, white 12%, transparent);
+            }
+            .sidebar-menu a.active::before {
+                content: "";
+                position: absolute;
+                left: 10px;
+                top: 50%;
+                width: 3px;
+                height: 50%;
+                border-radius: 999px;
+                transform: translateY(-50%);
+                background: color-mix(in srgb, white 80%, transparent);
+                box-shadow: 0 0 10px rgba(255, 255, 255, 0.35);
             }
             .sidebar-menu i {
                 margin-right: 0;
@@ -5122,6 +5150,7 @@
                 width: var(--sidebar-width);
                 align-items: stretch;
                 box-shadow: 0 12px 32px rgba(0, 0, 0, 0.22);
+                transition-timing-function: cubic-bezier(0.16, 0.84, 0.44, 1);
             }
             .sidebar:hover .sidebar-header p,
             .sidebar:hover .sidebar-title,
