Consolidate design tokens and component styles

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                     <i class="fas fa-times" aria-hidden="true"></i>
                                 </button>
                             </div>
-                        <button class="btn-contingencia" id="btn-contingencia" aria-label="Registrar contingência">
+                        <button class="btn btn-ghost btn-contingencia" id="btn-contingencia" aria-label="Registrar contingência">
                             <i class="fas fa-person-walking-luggage" aria-hidden="true"></i>
                             Sem Armários
                         </button>
@@ -395,7 +395,7 @@
                             <p class="lf-subtitle">Controle rápido dos pertences armazenados e das ligações realizadas.</p>
                         </div>
                         <div class="lf-header-actions">
-                            <button class="btn ghost" id="achados-refresh" type="button" aria-label="Atualizar lista">
+                            <button class="btn btn-ghost" id="achados-refresh" type="button" aria-label="Atualizar lista">
                                 <i class="fas fa-rotate"></i>
                                 Atualizar
                             </button>
@@ -436,7 +436,7 @@
                         </div>
                         <div class="filter-group filter-actions">
                             <div class="actions-row">
-                                <button type="button" class="btn ghost btn-clean" id="achados-limpar-filtros">
+                                <button type="button" class="btn btn-ghost btn-clean" id="achados-limpar-filtros">
                                     <i class="fas fa-eraser"></i>
                                     Limpar
                                 </button>
