--- a/script.html
+++ b/script.html
@@ -3498,13 +3498,13 @@
 
                 const btnLigar = document.createElement('button');
                 btnLigar.type = 'button';
-                btnLigar.className = 'btn ghost';
+                btnLigar.className = 'btn btn-ghost';
                 btnLigar.innerHTML = '<i class="fas fa-phone"></i> Registrar ligação';
                 btnLigar.addEventListener('click', () => registrarLigacaoAchado(item));
 
                 const btnEditar = document.createElement('button');
                 btnEditar.type = 'button';
-                btnEditar.className = 'btn ghost';
+                btnEditar.className = 'btn btn-ghost';
                 btnEditar.innerHTML = '<i class="fas fa-pen"></i> Editar';
                 btnEditar.addEventListener('click', () => abrirModalAchado(item));
 
