--- a/style.html
+++ b/style.html
@@ -5115,16 +5115,29 @@
                 box-shadow: inset 0 0 0 1px color-mix(in srgb, white 10%, transparent);
             }
             .sidebar-menu a.active {
-                background: color-mix(in srgb, white 7%, transparent);
-                box-shadow: inset 0 0 0 1px color-mix(in srgb, white 12%, transparent);
+                background: transparent;
+                box-shadow: none;
+            }
+            .sidebar-menu a.active::after {
+                content: "";
+                position: absolute;
+                width: 38px;
+                height: 38px;
+                border-radius: 14px;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                background: color-mix(in srgb, white 14%, transparent);
+                box-shadow: 0 0 14px rgba(255, 255, 255, 0.3);
+                z-index: -1;
             }
             .sidebar-menu a.active::before {
                 content: "";
                 position: absolute;
-                left: 10px;
+                left: 12px;
                 top: 50%;
                 width: 3px;
-                height: 50%;
+                height: 26px;
                 border-radius: 999px;
                 transform: translateY(-50%);
                 background: color-mix(in srgb, white 80%, transparent);
@@ -5179,6 +5192,10 @@
             }
             .sidebar:hover .sidebar-menu a.active {
                 background: color-mix(in srgb, white 8%, rgba(0, 0, 0, 0.12));
+            }
+            .sidebar:hover .sidebar-menu a.active::before,
+            .sidebar:hover .sidebar-menu a.active::after {
+                opacity: 0;
             }
             .sidebar:hover ~ .main-content {
                 margin-left: var(--sidebar-width);
@@ -5514,6 +5531,36 @@
                 justify-content: center;
                 padding: 14px 0;
                 border-left: none;
+            }
+            .sidebar-menu a.active {
+                background: transparent;
+                border-left: none;
+                box-shadow: none;
+            }
+            .sidebar-menu a.active::before {
+                content: "";
+                position: absolute;
+                left: 8px;
+                top: 50%;
+                width: 3px;
+                height: 22px;
+                border-radius: 999px;
+                transform: translateY(-50%);
+                background: color-mix(in srgb, white 80%, transparent);
+                box-shadow: 0 0 10px rgba(255, 255, 255, 0.35);
+            }
+            .sidebar-menu a.active::after {
+                content: "";
+                position: absolute;
+                width: 34px;
+                height: 34px;
+                border-radius: 12px;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                background: color-mix(in srgb, white 14%, transparent);
+                box-shadow: 0 0 12px rgba(255, 255, 255, 0.3);
+                z-index: -1;
             }
             .sidebar-menu i {
                 margin-right: 0;
