--- a/style.html
+++ b/style.html
@@ -684,8 +684,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: color-mix(in srgb, var(--surface-color) 16%, transparent);
-            color: color-mix(in srgb, var(--text-color) 85%, var(--primary-dark) 15%);
+            background: color-mix(in srgb, var(--color-neutral-0) 18%, transparent);
+            color: var(--color-neutral-0);
             font-size: 28px;
             box-shadow: var(--shadow-md);
         }
