--- a/index.html
+++ b/index.html
@@ -151,35 +151,35 @@
             <div class="page active" id="dashboard">
                 <!-- Cards Hero -->
                 <div class="cards-hero">
-                    <div class="card em-uso">
+                    <div class="card em-uso" data-filter="em-uso">
                         <div class="card-header">
                             <div class="card-icon"><i class="fas fa-user-clock"></i></div>
                             <div class="card-title">Em uso</div>
                         </div>
                         <div class="card-value" id="em-uso-count">0</div>
                     </div>
-                    <div class="card livre">
+                    <div class="card livre" data-filter="livre">
                         <div class="card-header">
                             <div class="card-icon"><i class="fas fa-check-circle"></i></div>
                             <div class="card-title">Livres</div>
                         </div>
                         <div class="card-value" id="livres-count">0</div>
                     </div>
-                    <div class="card proximo">
+                    <div class="card proximo" data-filter="proximo">
                         <div class="card-header">
                             <div class="card-icon"><i class="fas fa-exclamation-triangle"></i></div>
                             <div class="card-title">Próximo do horário</div>
                         </div>
                         <div class="card-value" id="proximo-count">0</div>
                     </div>
-                    <div class="card contingencia">
+                    <div class="card contingencia" data-filter="contingencia">
                         <div class="card-header">
                             <div class="card-icon"><i class="fas fa-shield-alt"></i></div>
                             <div class="card-title">Contingência</div>
                         </div>
                         <div class="card-value" id="contingencia-count">0</div>
                     </div>
-                    <div class="card vencido">
+                    <div class="card vencido" data-filter="vencido">
                         <div class="card-header">
                             <div class="card-icon"><i class="fas fa-times-circle"></i></div>
                             <div class="card-title">Vencidos</div>
