--- a/style.html
+++ b/style.html
@@ -961,6 +961,10 @@
         .selector-trigger:hover {
             background: color-mix(in srgb, var(--primary-color) 10%, white 90%);
         }
+        [data-theme="dark"] .selector-trigger:focus-visible,
+        [data-theme="dark"] .selector-trigger:hover {
+            background: color-mix(in srgb, var(--primary-color) 18%, var(--surface-color) 82%);
+        }
         .selector-trigger-text {
             display: flex;
             flex-direction: column;
@@ -3446,6 +3450,10 @@
             border-bottom: 1px solid color-mix(in srgb, var(--dark-color) 6%, transparent);
             background: linear-gradient(180deg, color-mix(in srgb, var(--light-color) 55%, white 45%), var(--light-color));
         }
+        [data-theme="dark"] .wizard-header {
+            border-bottom: 1px solid color-mix(in srgb, var(--border-color) 70%, transparent);
+            background: linear-gradient(180deg, color-mix(in srgb, var(--surface-color) 92%, var(--color-background) 8%), var(--surface-color));
+        }
         .wizard-title {
             font-size: 1.2rem;
             font-weight: 700;
@@ -3467,12 +3475,19 @@
             overflow: hidden;
             box-shadow: inset 0 1px 2px color-mix(in srgb, var(--dark-color) 8%, transparent);
         }
+        [data-theme="dark"] .wizard-progress-bar {
+            background: color-mix(in srgb, var(--color-background) 70%, var(--surface-color) 30%);
+            box-shadow: inset 0 1px 2px color-mix(in srgb, var(--color-neutral-900) 8%, transparent);
+        }
         .wizard-progress-bar span {
             display: block;
             height: 100%;
             width: 0;
             background: linear-gradient(90deg, var(--primary-color), color-mix(in srgb, var(--primary-color) 55%, white 45%));
             transition: width 0.4s ease;
+        }
+        [data-theme="dark"] .wizard-progress-bar span {
+            background: linear-gradient(90deg, var(--primary-color), color-mix(in srgb, var(--primary-color) 70%, var(--color-neutral-0) 30%));
         }
         .wizard-progress-label {
             text-align: right;
@@ -3486,6 +3501,9 @@
             padding: 26px;
             background: color-mix(in srgb, var(--light-color) 80%, white 20%);
         }
+        [data-theme="dark"] .wizard-body {
+            background: color-mix(in srgb, var(--surface-color) 90%, var(--color-background) 10%);
+        }
         .wizard-orientacoes-list {
             display: grid;
             gap: 10px;
@@ -3496,15 +3514,27 @@
             color: var(--text-color);
             line-height: 1.45;
         }
+        [data-theme="dark"] .wizard-orientacoes-list {
+            background: color-mix(in srgb, var(--primary-color) 10%, var(--surface-color) 90%);
+            border-color: color-mix(in srgb, var(--primary-color) 28%, transparent);
+        }
         .wizard-orientacoes-list.is-confirmed {
             background: color-mix(in srgb, var(--success-color) 12%, white 88%);
             border-color: color-mix(in srgb, var(--success-color) 46%, transparent);
             box-shadow: 0 8px 18px rgba(34, 197, 94, 0.16);
         }
+        [data-theme="dark"] .wizard-orientacoes-list.is-confirmed {
+            background: color-mix(in srgb, var(--success-color) 16%, var(--surface-color) 84%);
+            border-color: color-mix(in srgb, var(--success-color) 45%, transparent);
+            box-shadow: 0 10px 22px color-mix(in srgb, var(--success-color) 20%, transparent);
+        }
         .wizard-orientacao-indice {
             font-weight: 700;
             color: color-mix(in srgb, var(--primary-dark) 78%, black 22%);
             margin-right: 6px;
+        }
+        [data-theme="dark"] .wizard-orientacao-indice {
+            color: color-mix(in srgb, var(--primary-color) 70%, var(--color-neutral-0) 30%);
         }
         .wizard-check-button {
             display: inline-flex;
@@ -3520,15 +3550,30 @@
             transition: all 0.2s ease;
             box-shadow: 0 6px 14px rgba(11, 19, 36, 0.05);
         }
+        [data-theme="dark"] .wizard-check-button {
+            border-color: color-mix(in srgb, var(--primary-color) 45%, transparent);
+            background: color-mix(in srgb, var(--primary-color) 16%, var(--surface-color) 84%);
+            color: color-mix(in srgb, var(--primary-color) 75%, var(--color-neutral-0) 25%);
+            box-shadow: 0 8px 18px color-mix(in srgb, var(--primary-color) 20%, transparent);
+        }
         .wizard-check-button:hover {
             background: color-mix(in srgb, var(--primary-color) 16%, var(--surface-color) 84%);
             transform: translateY(-1px);
+        }
+        [data-theme="dark"] .wizard-check-button:hover {
+            background: color-mix(in srgb, var(--primary-color) 24%, var(--surface-color) 76%);
         }
         .wizard-check-button.active {
             background: color-mix(in srgb, var(--success-color) 16%, white 84%);
             border-color: color-mix(in srgb, var(--success-color) 48%, transparent);
             color: color-mix(in srgb, var(--success-color) 82%, black 18%);
             box-shadow: 0 10px 20px rgba(34, 197, 94, 0.14);
+        }
+        [data-theme="dark"] .wizard-check-button.active {
+            background: color-mix(in srgb, var(--success-color) 22%, var(--surface-color) 78%);
+            border-color: color-mix(in srgb, var(--success-color) 55%, transparent);
+            color: color-mix(in srgb, var(--success-color) 70%, var(--color-neutral-0) 30%);
+            box-shadow: 0 12px 24px color-mix(in srgb, var(--success-color) 24%, transparent);
         }
         .wizard-check-icon {
             font-size: 3rem;
@@ -3545,6 +3590,9 @@
             z-index: var(--z-modal-content);
             flex-direction: column;
         }
+        [data-theme="dark"] .wizard-loading {
+            background: rgba(2, 6, 23, 0.75);
+        }
         .wizard-loading.active {
             display: flex;
         }
@@ -3555,6 +3603,10 @@
             border: 3px solid color-mix(in srgb, var(--primary-color) 25%, white 75%);
             border-top-color: var(--primary-color);
             animation: spin 0.7s linear infinite;
+        }
+        [data-theme="dark"] .wizard-loading-spinner {
+            border: 3px solid color-mix(in srgb, var(--primary-color) 30%, transparent);
+            border-top-color: var(--primary-color);
         }
         .wizard-loading-text {
             color: var(--dark-color);
@@ -3633,6 +3685,10 @@
             font-size: 0.75rem;
             text-transform: uppercase;
             letter-spacing: 0.5px;
+        }
+        [data-theme="dark"] .wizard-badge {
+            color: color-mix(in srgb, var(--primary-color) 75%, var(--color-neutral-0) 25%);
+            border-color: color-mix(in srgb, var(--primary-color) 45%, transparent);
         }
         .wizard-inline {
             display: flex;
@@ -4399,6 +4455,13 @@
             background: color-mix(in srgb, var(--primary-color) 4%, var(--light-color) 96%);
             margin-bottom: 18px;
         }
+        [data-theme="dark"] .prontuario-search {
+            background: color-mix(in srgb, var(--surface-color) 88%, var(--color-background) 12%);
+            border-color: color-mix(in srgb, var(--primary-color) 38%, var(--border-color) 62%);
+        }
+        [data-theme="dark"] .prontuario-search label {
+            color: var(--text-color);
+        }
         .prontuario-search-header {
             display: flex;
             flex-direction: column;
@@ -4439,6 +4502,11 @@
             padding: 3px 8px;
             border-radius: 999px;
             margin-left: 6px;
+        }
+        [data-theme="dark"] .tag-opcional {
+            background: color-mix(in srgb, var(--primary-color) 18%, var(--surface-color) 82%);
+            border-color: color-mix(in srgb, var(--primary-color) 35%, var(--border-color) 65%);
+            color: color-mix(in srgb, var(--muted-color) 85%, var(--color-neutral-0) 15%);
         }
         .search-feedback {
             font-size: 0.85rem;
